force-app/main/default/objects/Party__c/Party__c.object-meta.xml
<CustomObject>
    <label>Party</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>