force-app/main/default/objects/Party__c/fields/LeaderName__c.field-meta.xml
<CustomField>
    <fullName>LeaderName__c</fullName>
    <label>LeaderName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>