force-app/main/default/objects/Party__c/fields/Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Name__c</fullName>
    <label>Party Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>