force-app/main/default/objects/Party__c/fields/PartyCode__c.field-meta.xml
<CustomField>
    <fullName>PartyCode__c</fullName>
    <label>PartyCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>